Test/errors/err_simd_non_literal_lanes.cb
// simd lane count must be an integer literal, not a name.

expect_error("simd lane count must be an integer literal") {
    simd<float, LANES> v;
}
